--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -10,14 +10,21 @@ jobs:
   scheduled:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup deno
-        uses: denoland/setup-deno@main
-        with:
-          deno-version: v1.10.x
       - name: Check out repo
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
       - name: Fetch data
-        uses: githubocto/flat@v3
-        with:
-          http_url: https://goodailist.com/api/repos
-          downloaded_filename: repos.json
+        run: |
+          curl -fsSL "https://goodailist.com/api/repos" -o "repos.json"
+      - name: Commit and push if changed
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          if git status --porcelain | grep -q "^\s*M\s*repos.json\|^\s*A\s*repos.json"; then
+            git add repos.json
+            git commit -m "Update repos.json ($(date -u +%Y-%m-%d))"
+            git push
+          else
+            echo "No changes to commit."
+          fi
